deployments/goapp/overlays/dev/http-server.ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server
  labels:
    app.kubernetes.io/component: http-server
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: goapp-dev.gomod.damlys.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server
                port:
                  name: http
  tls:
    - hosts:
        - goapp-dev.gomod.damlys.dev
      secretName: tls-goapp-dev
